Bug 353159 - kaccounts-integration google contacts creates log file
Summary: kaccounts-integration google contacts creates log file
Status: RESOLVED FIXED
Alias: None
Product: KAccounts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-25 08:38 UTC by Harald Sitter
Modified: 2015-10-06 19:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (155.37 KB, image/jpeg)
2015-09-25 08:38 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-09-25 08:38:07 UTC
in master kaccounts-integration's daemonplugin google_contacts_plugin creates a random log file in the users home.


Reproducible: Always
Comment 1 Harald Sitter 2015-09-25 08:38:41 UTC
Created attachment 94714 [details]
screenshot
Comment 2 Martin Klapetek 2015-09-25 12:59:47 UTC
Yes, I use it on the phone as otherwise there's no easy way to debug it.

Altho I could perhaps make it ifdefed and add a cmake flag which would build it only on the phone.
Comment 3 Martin Klapetek 2015-10-06 19:10:11 UTC
Git commit ba64910b1fde58d4bfedd419b51229b8befb57d4 by Martin Klapetek.
Committed on 06/10/2015 at 19:09.
Pushed by mklapetek into branch 'master'.

[google-contacts] Disable the special qDebug handler

This was intended for Plasma Phone only but setting the message handler
needs to be more clever, like controlled via env var or something.

M  +1    -1    src/daemon/plugins/google-contacts-sync/google-contacts-plugin.cpp

http://commits.kde.org/kaccounts-integration/ba64910b1fde58d4bfedd419b51229b8befb57d4