[google-contacts] Disable the special qDebug handler

This was intended for Plasma Phone only but setting the message handler
needs to be more clever, like controlled via env var or something.

BUG: 353159