src/daemon/plugins/google-contacts-sync/google-contacts-plugin.cpp
@@ -93,7 +93,7 @@ GoogleContactsPlugin::GoogleContactsPlugin(QObject *parent)
     : KAccountsDPlugin(parent),
       d(new Private())
 {
-    qInstallMessageHandler(myMessageOutput);
+//     qInstallMessageHandler(myMessageOutput);
 }
 
 GoogleContactsPlugin::~GoogleContactsPlugin()
